<resources>
    <string name="app_name" translatable="false">OneHyre Driver</string>
    <string name="title_activity_registered_user_verifing" translatable="false">RegisteredUserVerifingActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="sys_offline" translatable="false">System Offline.</string>
    <string-array name="vehicle_types">
        <item>Tuks</item>
        <item>Flex</item>
        <item>Mini</item>
        <item>Cars</item>
        <item>Minivans</item>
        <item>Vans</item>
    </string-array>
    <string-array name="tuks_types">
        <item>Bajaj Three-Wheeler</item>
        <item>TVS Three-Wheeler</item>
    </string-array>
    <string-array name="flex_types">
        <item>Tata Nano</item>
        <item>Suzuki Alto (Old Model)</item>
    </string-array>
    <string-array name="mini_types">
        <item>Waggon R</item>
        <item>Suzuki Flare Crossover</item>
        <item>Suzuki Alto</item>
        <item>Celerio</item>
        <item>Dutson Ready-Go</item>
        <item>Micro Panda</item>
    </string-array>
    <string-array name="cars_types">
        <item>Prius</item>
        <item>Axio</item>
        <item>Grace</item>
        <item>Honda Fit Shuttle</item>
    </string-array>
    <string-array name="minivans_types">
        <item>Dual A/C Toyota</item>
        <item>Honda</item>
        <item>Suzuki</item>
        <item>Mitsubishi</item>
    </string-array>
    <string-array name="vans_types">
        <item>KDH</item>
        <item>Commuter</item>
        <item>HiAce</item>
    </string-array>
    <string name="ent_comp_signup" translatable="false"><u>here</u>.</string>
    <string name="terms_and_conditions" translatable="false"><u>Terms and Conditions</u>.</string>
    <string name="day_time">Day Time (6AM to 9PM)</string>
    <string name="night_time">Night Time (9PM to 6AM)</string>
    <string name="starting_fee">Starting Fee: </string>
    <string name="two_km">From 2km: </string>
    <string name="waiting_fee">Waiting Fee (per 1min): </string>
    <string name="update">UPDATE</string>
    <string name="last_updated">Last updated on: </string>
    <string name="your_vehicle_type">Your Vehicle Type: </string>
    <string name="welcome_message">Welcome</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="start_button_text">Start</string>
    <string name="total_fare">Total Fare(Rs)</string>
    <string name="distance">Distance(KM)</string>
    <string name="hire_time">Hire Time</string>
    <string name="speed">Speed(Km/h)</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="premium_features">Premium Features</string>
    <string name="unlock_client_email">*     Unlocks Client e-mail.</string>
    <string name="remove_ads">*     Remove ads</string>
    <string name="cancel_anytime">*     Cancel anytime</string>
    <string name="price_subscription">$0.99</string>
    <string name="subscription_status">Status</string>
    <string name="subscription_description">Your GooglePlay account will be charged at confirmation of purchase. Your subscription can be managed in Google Play Store\'s \'Payments and subscription\' tab and will auto-renew unless disabled 24 hours prior to the end of billing cycle.</string>
    <string name="buy">BUY</string>
    <string name="premium_note">
        Introducing My Taxi, the taxi metering mobile app that offers a Pro Plan for only $20 per month. With this plan,
        you\'ll have access to advanced features like sending trip receipts to customers through email and SMS.
        This allows for a seamless experience and easy record keeping.
        Sign up for My Taxi\'s Pro Plan now to elevate your taxi business.
    </string>
    <string name="activate_premium">Activate Premium</string>
    <string name="register_title">Register</string>
    <string name="enterprise_title">Enterprise</string>
    <string name="enterprise_join_guide">Touch here to join your Enterprise</string>
    <string name="enterprise_found_name">Your Enterprise Name</string>
    <string name="enterprise_found_email">Your Enterprise Email: thisisasampleemail@abc.com</string>
    <string name="enterprise_found_phone">Your Enterprise Telephone: 0472261455</string>
    <string name="enterprise_continue">Continue</string>
    <string name="driver_info_title">Driver Info.</string>
    <string name="driver_name">Driver\'s name</string>
    <string name="nic_number">Driver\'s NIC number</string>
    <string name="driver_phone">Driver\'s telephone number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_registration">Vehicle registration number</string>
    <string name="sign_up">Sign up</string>
    <string name="select_your_course">Select Your Package</string>
    <string name="select_course_card_expand">Select Package</string>
    <string name="individual">Individual</string>
    <string name="more_information">More information</string>
    <string name="less_information">Less information</string>
    <string name="individual_description">Individuals are stand-alone employees who work independently
        and are not associated with any particular
        team, company, or enterprise. If you are a solo driver or worker,
        select this option to proceed and sign up as an individual employee."</string>
    <string name="enterprise">Enterprise</string>
    <string name="enterprise_description">Enterprise is for employees registered under specific companies who work with teams,
        companies, or enterprises. If you are associated with a company and part of their workforce,
        select this option to proceed and sign up as an Enterprise employee."</string>
    <string name="loading_text">Loading..</string>
    <string name="customer_name">Customer Name:</string>
    <string name="customer_email">Customer e-mail:</string>
    <string name="customer_phone">Customer Telephone:</string>
    <string name="fare">Fare:</string>
    <string name="waiting_time_trip_details">Waiting time:</string>
    <string name="hire_time_trip_details">Hire time:</string>
    <string name="distance_trip_details">Distance:</string>
    <string name="one_km_fee">One km Fee:</string>
    <string name="two_km_fee">Two km Fee:</string>
    <string name="waiting_fee_trip_details">Waiting fee:</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="vehicle_number">Vehicle Number:</string>
    <string name="date">Date:</string>
    <string name="logout_prompt">Are you sure you want to log out?</string>
    <string name="phone_number">Phone number</string>
    <string name="cont_to_logout">Logout</string>
    <string name="go_back">Back</string>
    <string name="title_des">Before Continue, \nVerify that it\'s you!</string>
    <string name="enter_otp_to_sign_in">Enter OTP</string>
    <string name="resend_otp_note">Didn\'t receive code?</string>
    <string name="resend_otp_sign_in">Resend</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="button_text_log_out">Logout</string>
    <string name="button_text_back">Back</string>
</resources>