<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/highlight"
        app:cardCornerRadius="28dp"
        android:elevation="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/samsung_sharp_sans_bold"
                android:text="30/03/2022"
                android:textColor="@color/background2"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/samsung_sharp_sans_bold"
                android:text="88.88 PM"
                android:textColor="@color/texts"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewDayOrNight"/>

            <TextView
                android:id="@+id/txtTripId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/samsung_sharp_sans_bold"
                android:text="Tap to see more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_date"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/imageViewDayOrNight"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_unavailable_image10px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="130dp"
                android:background="@color/background2"
                app:layout_constraintEnd_toStartOf="@+id/date"
                app:layout_constraintStart_toEndOf="@+id/imageViewDayOrNight"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- Hidden Contents -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="gone"
                android:id="@+id/fullTripDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTripId">

                <TextView
                    android:id="@+id/clientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/clientMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_email"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clientName" />

                <TextView
                    android:id="@+id/clientPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_phone"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clientMail" />

                <TextView
                    android:id="@+id/tothiretxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fare"
                    android:textColor="@color/texts"
                    android:fontFamily="@font/samsung_one_700"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clientPhone" />

                <TextView
                    android:id="@+id/wating_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_time_trip_details"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tothiretxt" />

                <TextView
                    android:id="@+id/hire_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hire_time_trip_details"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wating_time" />

                <TextView
                    android:id="@+id/hire_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_trip_details"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hire_time" />

                <TextView
                    android:id="@+id/onekm_fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_km_fee"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hire_distance" />

                <TextView
                    android:id="@+id/twokm_fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_km_fee"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/onekm_fee" />

                <TextView
                    android:id="@+id/waiting_fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_fee_trip_details"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/twokm_fee" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/waiting_fee" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_time" />

                <TextView
                    android:id="@+id/txtVehicleNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_number"
                    android:fontFamily="@font/samsung_one_700"
                    android:textColor="@color/texts"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/end_time" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>