<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisteredUserVerifyingActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="Hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_app_logo"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsung_sharp_sans_bold"
        android:text="@string/title_des"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tvTitleNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsung_one_700"
        android:text="[shared preference error]"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainTitle"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etEnterOtp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColorHint="@color/flake_white"
        android:textColor="@color/flake_white"
        android:hint="@string/enter_otp_to_sign_in"
        android:fontFamily="@font/samsung_one_700"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleNote"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/highlight"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterOtp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvDidntReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/samsung_one_700"
            android:text="@string/resend_otp_note"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnTvResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/samsung_one_700"
            android:layout_toRightOf="@id/tvDidntReceive"
            android:text="@string/resend_otp_sign_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvDidntReceive"
            app:layout_constraintStart_toEndOf="@+id/tvDidntReceive"
            app:layout_constraintTop_toTopOf="@+id/tvDidntReceive" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerifyOTP"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/samsung_sharp_sans_bold"
        android:background="@drawable/button_desgin"
        android:backgroundTint="@color/buttons"
        android:text="Verify"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout28"
        android:layout_marginTop="50dp"/>


        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="-50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>